보안: 회원가입/로그인 보안 전면 강화
- [Step1] DTO 유효성 검사: 이메일 형식, 비밀번호 최소 8자+영문+숫자 조건 추가
- [Step2] Rate Limiting: IP 기준 10분당 로그인 10회 제한 (Bucket4j)
- [Step3] CORS: 허용 오리진을 환경변수(CORS_ALLOWED_ORIGINS)로 분리
- [Step4] Refresh Token DB 저장: SHA-256 해시 저장, 토큰 로테이션, 로그아웃 엔드포인트(/auth/logout) 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>